exercises/04_derive/07_spans/tests/fail/unit_field.rs
use spans_exercise::Getters;

#[derive(Getters)]
struct Config {
    name: String,
    marker: (),
}

fn main() {}
